add jupyter lab

--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.6-alpine
+FROM alpine:3.9.3
 
 ENV PYTHONUNBUFFERED 1
 
 RUN apk update \
   # psycopg2 dependencies
-  && apk add --virtual build-deps gcc python3-dev musl-dev \
+  && apk add --virtual build-deps gcc python3 python3-dev musl-dev \
   && apk add postgresql-dev \
   # Pillow dependencies
   && apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
@@ -13,11 +13,16 @@ RUN apk update \
   # Translations dependencies
   && apk add gettext \
   # https://docs.djangoproject.com/en/dev/ref/django-admin/#dbshell
-  && apk add postgresql-client
+  && apk add postgresql-client \
+  # ZeroMQ
+  && apk add libzmq zeromq-dev
+
+RUN ln -s /usr/bin/python3 /usr/local/bin/python
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements /requirements
-RUN pip install -r /requirements/local.txt
+RUN pip3 install -U pip
+RUN pip3 install -r /requirements/local.txt
 
 COPY ./compose/production/django/entrypoint /entrypoint
 RUN sed -i 's/\r//' /entrypoint
@@ -38,6 +43,13 @@ RUN chmod +x /start-celerybeat
 COPY ./compose/local/django/celery/flower/start /start-flower
 RUN sed -i 's/\r//' /start-flower
 RUN chmod +x /start-flower
+
+COPY ./compose/local/django/start-jupyter /start-jupyter
+RUN sed -i 's/\r//' /start-jupyter
+RUN chmod +x /start-jupyter
+
+# reduce image size by cleaning up the build packages
+RUN apk del build-base musl-dev python3-dev zeromq-dev postgresql-dev
 
 WORKDIR /app
 
