--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,7 +18,7 @@ RUN apk update \
   # Pillow dependencies
   && apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
   # CFFI dependencies
-  && apk add libffi-dev py-cffi
+  && apk add libffi-dev py-cffi \
   # Git
   && apk add git \
   # pdftotext
