--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -45,6 +45,12 @@ COPY ./compose/production/django/start /start
 RUN sed -i 's/\r//' /start
 RUN chmod +x /start
 RUN chown django /start
+
+COPY ./compose/production/django/deployment-tasks /deployment-tasks
+RUN sed -i 's/\r//' /deployment-tasks
+RUN chmod +x /deployment-tasks
+RUN chown django /deployment-tasks
+
 COPY ./compose/production/django/celery/worker/start /start-celeryworker
 RUN sed -i 's/\r//' /start-celeryworker
 RUN chmod +x /start-celeryworker
