--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,9 @@
 build:
   docker:
     web: Dockerfile.prod
-# release:
-#   image: web
-#   command:
-#     - /deployment-tasks
+release:
+  command:
+    - /deployment-tasks.sh
+  image: web
 run:
   web: ./compose/production/django/start
