--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,7 +13,7 @@ ENV PYTHONUNBUFFERED 1
 
 RUN apk update \
   # psycopg2 dependencies
-  && apk add --virtual build-deps gcc python3 python3-dev musl-dev py3-pip bash \
+  && apk add --virtual build-deps gcc python3 python3-dev musl-dev py3-pip bash curl \
   && apk add postgresql-dev \
   # Pillow dependencies
   && apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
