add DJANGO_SECRET_KEY generator

--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
   "env": {
     "DJANGO_SETTINGS_MODULE": {
       "value": "config.settings.production"
+    },
+    "DJANGO_SECRET_KEY": {
+      "description": "Django's secret key",
+      "generator": "secret"
     }
   },
   "formation": {
