--- a/app.json
+++ b/app.json
@@ -22,6 +22,21 @@
     "DJANGO_SECRET_KEY": {
       "description": "Django's secret key",
       "generator": "secret"
+    },
+    "DJANGO_AWS_ACCESS_KEY_ID": {
+      "value": "awsaccesskey"
+    },
+    "DJANGO_AWS_SECRET_ACCESS_KEY": {
+      "value": "awssecretaccesskey"
+    },
+    "DJANGO_AWS_STORAGE_BUCKET_NAME": {
+      "value": "awsbucketname"
+    },
+    "ADMIN_URL": {
+      "value": "admin-test/"
+    },
+    "SENTRY_DSN": {
+      "value": ""
     }
   },
   "formation": {
