--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=config.settings.test
 norecursedirs = node_modules
+addopts = --cov=dear_petition --cov-report=html --cov-report=term
