ignore templates in coverage for now

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,5 @@
 [run]
 include = dear_petition/*
-omit = *migrations*, *tests*
+omit = *migrations*, *tests*, *templates*
 plugins =
     django_coverage_plugin
