--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "reaktus": "^0.1.6",
     "styled-components": "^5.1.0"
   },
   "scripts": {
