--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "dear_petition",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "reaktus": "^0.1.6"
+  },
   "devDependencies": {
     "autoprefixer": "^9.4.7",
     "browser-sync": "^2.14.0",
