--- a/app.json
+++ b/app.json
@@ -45,7 +45,12 @@
     }
   },
   "name": "dear-petition",
-  "scripts": {
+  "environments": {
+    "review": {
+      "scripts": {
+        "postdeploy": "postdeploy.sh"
+      }
+    }
   },
   "stack": "heroku-18"
 }
