--- a/app.json
+++ b/app.json
@@ -42,11 +42,12 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "free"
+      "size": "hobby"
     }
   },
   "name": "dear-petition",
   "scripts": {
+    "postdeploy": "./postdeploy.sh"
   },
   "stack": "heroku-18"
 }
