--- a/app.json
+++ b/app.json
@@ -45,8 +45,13 @@
     }
   },
   "name": "dear-petition",
+  "environments": {
+    "review": {
+      "scripts": {
+        "postdeploy": "./postdeploy.sh"
+    }
+  },
   "scripts": {
-    "postdeploy": "./postdeploy.sh"
   },
   "stack": "heroku-18"
 }
