--- a/local.yml
+++ b/local.yml
@@ -15,6 +15,8 @@ services:
       - mailhog
     volumes:
       - .:/app
+      - /app/frontend/node_modules
+      - /app/node_modules
     env_file:
       - ./.envs/.local/.django
       - ./.envs/.local/.postgres
