auth handshake complete with logout, includes auth-revamp

--- a/local.yml
+++ b/local.yml
@@ -42,6 +42,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.dev
     stdin_open: true
+    depends_on:
+      - django
     ports:
       - "3000:3000"
     volumes:
