--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,16 +2,23 @@
   "name": "dearpetition",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://django:8000/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "framer-motion": "^1.10.3",
     "react": "^16.13.1",
+    "react-alert": "^7.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "reaktus": "^0.1.6",
     "styled-components": "^5.1.0"
   },
