first pass at agency autocomplete

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^1.10.3",
     "react": "^16.13.1",
     "react-alert": "^7.0.1",
+    "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
