--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,29 @@ notebooks/ignore
 
 dear_petition/static/css/project.min.css
 dear_petition/static/js/project.min.js
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode
