fix frontend context

--- a/local.yml
+++ b/local.yml
@@ -39,6 +39,7 @@ services:
 
   frontend:
     build:
+      context: .
       dockerfile: Dockerfile.dev
     stdin_open: true
     depends_on:
@@ -46,8 +47,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /app/frontend/node_modules
-      - ./frontend/:/app/frontend
+      - /app/node_modules
+      - ./:/app/
     environment:
       - CHOKIDAR_USEPOLLING=true
 
