--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dearpetition",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://django:8000/",
+  "proxy": "https://dear-petition-staging.herokuapp.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
