--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=config.settings.test
-norecursedirs = node_modules
+norecursedirs = node_modules .* build *.eggb venv
 addopts = --cov=dear_petition --cov-report=html --cov-report=term
+testpaths = dear_petition/petition
