Improve proxy configuration
* Use `http://django:8000` when using docker-compose by default
* Added `OVERRIDE_API_PROXY` environment variable to override default
* The admin pages are now also proxied
* Removed unused dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,10 @@ services:
     volumes:
       - /app/node_modules
       - ./:/app/
+    env_file:
+      - ./.envs/.local/.frontend
     environment:
-      - CHOKIDAR_USEPOLLING=true
+      - OVERRIDE_API_PROXY
 
   mailhog:
     image: mailhog/mailhog:v1.0.0
