--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          pip install -r requirements/local.txt
+          pip install -r requirements/local.txt -r requirements/production.txt
       - name: Run Tests
         run: pytest
         env:
