first pass at production dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,10 +2,38 @@
 !.coveragerc
 !.env
 !.pylintrc
-./node_modules/*
-./frontend/*
-node_modules
-build
+**/*.DS_Store
+**/__pycache__
+**/*.pyc
+**/node_modules
+**/media
+*.db
+*.dump
+*.pgdump
+*.sql
+*.orig
+.coverage
+.circleci
 .dockerignore
+.git
+.env
+.envrc
+.direnv
+.ipython
+.postgres
+.python-version
+.pytest_cache
+.vscode
+bin
+build
+compose
+deploy
+docs
+htmlcov
+locale
+notebooks
+venv
 Dockerfile
-# Dockerfile.prod
+Dockerfile.prod
+npm-debug.log
+webpack-stats.json
