--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "reaktus": "^0.1.6",
+    "remark-sectionize": "^1.1.1",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
