--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-alert": "^7.0.1",
     "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
+    "react-markdown": "^6.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "reaktus": "^0.1.6",
+    "remark-sectionize": "^1.1.1",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
