Remove unnecessary packages and fix random eslint issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,18 @@
 {
+  "env": {
+    "browser": true
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.js",
+        "**/*.test.jsx"
+      ],
+      "env": {
+        "jest": true
+      }
+    }
+  ],
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
