--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.21.1",
     "framer-motion": "^1.10.3",
-    "react": "^16.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
     "react-autosuggest": "^10.0.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.3",
     "react-select": "^3.1.0",
     "remark-sectionize": "^1.1.1",
     "styled-components": "^5.1.0"
@@ -21,15 +22,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.19.1"
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
