add bootstrap-review-app cmd

--- a/app.json
+++ b/app.json
@@ -22,6 +22,9 @@
       "description": "Django's secret key",
       "generator": "secret"
     },
+    "IS_REVIEW": {
+      "value": "True"
+    }
     "DJANGO_AWS_ACCESS_KEY_ID": {
       "value": "awsaccesskey"
     },
