Fix handling of page numbers and use 403 properly

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     ],
     "no-use-before-define": "off",
     "no-underscore-dangle": "off",
+    "no-unused-vars": "warn",
     "no-plusplus": "off",
     "no-continue": "off",
     "no-prototype-builtins": "off",
