--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"],
+    "prettier/prettier": ["error",   {
+      "endOfLine": "auto"
+    }],
     "react/jsx-filename-extension": [
       1,
       {
