--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,7 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error",   {
-      "endOfLine": "auto"
-    }],
+    "prettier/prettier": ["error"],
     "react/jsx-filename-extension": [
       1,
       {
