Able to build locally and use parser mode v1

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,38 +2,10 @@
 !.coveragerc
 !.env
 !.pylintrc
-**/*.DS_Store
-**/__pycache__
-**/*.pyc
-**/node_modules
-**/media
-*.db
-*.dump
-*.pgdump
-*.sql
-*.orig
-.coverage
-.circleci
-.dockerignore
-.git
-.env
-.envrc
-.direnv
-.ipython
-.postgres
-.python-version
-.pytest_cache
-.vscode
-bin
+./node_modules/*
+./frontend/*
+node_modules
 build
-compose
-deploy
-docs
-htmlcov
-locale
-notebooks
-venv
+.dockerignore
 Dockerfile
-Dockerfile.prod
-npm-debug.log
-webpack-stats.json
+# Dockerfile.prod
