--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": 0,
+    "prettier/prettier": ["error"],
     "react/jsx-filename-extension": [
       1,
       {
