Create production Dockerfile (#229)
* first pass at production dockerfile

* add invoke

* wip running image

* install latest pdftotext

* all override settings for local builds

* re-pin ciprs-reader

* switch to container stack

* add heroku.yml

* remove review scripts to try to get around "Error parsing postdeploy output"

* add bootstrap-review-app cmd

* add curl

* remove gunicorn setting

* upgrade psycopg2 and sentry-sdk

* remove compose comments

* celery in docker

* use REDIS_URL

* also set CELERY_RESULT_BACKEND

--- a/app.json
+++ b/app.json
@@ -22,6 +22,9 @@
       "description": "Django's secret key",
       "generator": "secret"
     },
+    "IS_REVIEW": {
+      "value": "True"
+    }
     "DJANGO_AWS_ACCESS_KEY_ID": {
       "value": "awsaccesskey"
     },
@@ -45,14 +48,6 @@
     }
   },
   "name": "dear-petition",
-  "environments": {
-    "review": {
-      "scripts": {
-        "postdeploy": "./postdeploy.sh"
-      }
-    }
-  },
-  "scripts": {
-  },
-  "stack": "heroku-18"
+  "scripts": {},
+  "stack": "container"
 }
