--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@headlessui/react": "^1.5.0",
+    "@popperjs/core": "^2.11.2",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.2",
     "framer-motion": "^4.1.17",
@@ -15,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-markdown": "^6.0.2",
+    "react-popper": "^2.2.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
