--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.11.2",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.21.2",
+    "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
