--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -1,3 +1,61 @@
+FROM python:3.8-slim as static_files
+
+RUN set -ex \
+    && BUILD_DEPS=" \
+    curl \
+    build-essential \
+    zlib1g-dev \
+    libpng-dev \
+    pkg-config \
+    libfontconfig1-dev \
+    " \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends $BUILD_DEPS
+
+# Install poppler pdftotext, based on xpdf3 (the old version)
+RUN set -ex \
+    && curl -k https://poppler.freedesktop.org/poppler-0.57.0.tar.xz | tar xJ \
+    && chmod -R 755 ./poppler-0.57.0 \
+    && cd ./poppler-0.57.0/ \
+    && ./configure \
+        --prefix=/tmp/poppler \
+        --disable-shared \
+        --enable-static \
+        --enable-build-type=release \
+        --enable-libopenjpeg=none \
+        --enable-dctdecoder=none \
+        --enable-shared=no \
+    && make install \
+    && cp /tmp/poppler/bin/pdftotext /usr/local/bin/pdftotext
+
+# Install packages needed to run your application (not build deps):
+#   mime-support -- for mime types when serving static files
+#   postgresql-client -- for running database commands
+#   libfontconfig -- required by pdftotext
+# We need to recreate the /usr/share/man/man{1..8} directories first because
+# they were clobbered by a parent image.
+RUN set -ex \
+    && RUN_DEPS=" \
+    libpcre3 \
+    libfontconfig \
+    mime-support \
+    postgresql-client \
+    vim \
+    wget \
+    curl \
+    git \
+    libpq-dev \
+    " \
+    && seq 1 8 | xargs -I{} mkdir -p /usr/share/man/man{} \
+    && apt-get update && apt-get install -y --no-install-recommends $RUN_DEPS \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install pdftotext
+RUN set -ex \
+    && wget --no-check-certificate https://dl.xpdfreader.com/xpdf-tools-linux-4.03.tar.gz \
+    && tar -xvf xpdf-tools-linux-4.03.tar.gz \
+    && cp xpdf-tools-linux-4.03/bin64/pdftotext /usr/local/bin/pdftotext-4.03
+
 FROM alpine:3.12
 
 ENV PYTHONUNBUFFERED 1
@@ -18,11 +76,14 @@ RUN apk update \
   && apk add libzmq zeromq-dev \
   # Git
   && apk add git \
-  # pdftotext
-  && apk add poppler-utils
+  # glibc compat for pdftotext binaries
+  && apk add libc6-compat
 
 RUN ln -s /usr/bin/python3 /usr/local/bin/python
 RUN ln -s /usr/bin/pip3 /usr/local/bin/pip
+
+COPY --from=static_files /usr/local/bin/pdftotext /usr/local/bin/pdftotext
+COPY --from=static_files /usr/local/bin/pdftotext-4.03 /usr/local/bin/pdftotext-4.03
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements /requirements
