Use new pdftotext version name that ciprs reader expects

--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -54,7 +54,7 @@ RUN set -ex \
 RUN set -ex \
     && wget --no-check-certificate https://dl.xpdfreader.com/xpdf-tools-linux-4.04.tar.gz \
     && tar -xvf xpdf-tools-linux-4.04.tar.gz \
-    && cp xpdf-tools-linux-4.04/bin64/pdftotext /usr/local/bin/pdftotext-4.03
+    && cp xpdf-tools-linux-4.04/bin64/pdftotext /usr/local/bin/pdftotext-4
 
 FROM alpine:3.12
 
