Upgrade to CRA 5, add tailwind, and add modal for viewing + modifying offenses (#291)
* Working parser v1

* Use wget instead of curl for docker prod file

* Add xz-utils

* Add c compiler

* Add all remaining packages

* Upgrade to CRA 5

* Use onChange for checkbox instead of onClick for row

* Upgrade eslint and fix errors

* Fix warnings except for console logs

* Add tailwind

* Cleanup login css

* Add classnames and improve users page accessibility

* More css improvements

* Tweak underline width

* Add more spacing in login page

* Add modal for viewing and updating offenses

* Handle invalid dob and add header for flag column

* Change icon for warning

* Make dev and prod dockerfile inherit node version from base

* Fix dockerfiles

* Trigger redeploy

* Fix dockerfile

* Fix various docker issues

* Use new pdftotext version name that ciprs reader expects

* Update react-scripts

* Remove extends thing

* Try changing something that shouldn't fix the thing

* Fix staticfiles

* Finally fix tailwind

* Fix local django build

* Add file number to offense list drop down info

Co-authored-by: George Helman <gmhelman11@gmail.com>

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,21 @@
-FROM node:13.12.0-alpine
+FROM node:16-alpine3.14
 
 WORKDIR /app/
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-# Copy project contents since the mounted volume is not available yet
-COPY . ./
+# Install node_modules in directory outside of mounted volume
+ENV NODE_PACKAGES_HOME=/home/node_install
+RUN mkdir -p $NODE_PACKAGES_HOME
+COPY package.json package-lock.json $NODE_PACKAGES_HOME
+
+WORKDIR $NODE_PACKAGES_HOME
 
 # Dependencies will be persisted in /app/ volume under /app/node_modules
 RUN npm install
+
+WORKDIR /app/
+
+COPY . /app/
 
 CMD ["npm", "run", "start"]
