--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - "3000:3000"
     volumes:
       - ./:/app/
+      - /app/node_modules
     env_file:
       - ./.envs/.local/.frontend
     environment:
