Quick local docker fix and move select agency modal to different component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./:/app/
-      - /app/node_modules
+      - ./:/code/
+      - /code/node_modules
     env_file:
       - ./.envs/.local/.frontend
     environment:
