--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
     "import/no-extraneous-dependencies": ["error", {
       "devDependencies": ["src/setupTests.js", "**/*.test.js", "**/*.test.jsx"]
     }],
+    "jsx-a11y/label-has-associated-control": ["error", { "assert": "either" } ],
     "camelcase": "warn",
     "consistent-return": "warn",
     "import/no-named-as-default": 0,
