--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Cache pip
         uses: actions/cache@v2
         with:
@@ -36,6 +38,23 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements/**.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+      - name: Cache Docker build
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+            ${{ runner.os }}-
+      - name: Build Docker Deploy Image
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          load: true
+          tags: dear-petition
+          target: deploy
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
