--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
