--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ../..:/workspaces:cached
       - vscode-local:/home/vscode/.local
       - vscode-cache:/home/vscode/.cache
+      - vscode-media:/workspaces/dear-petition/dear_petition/media
       - vscode-node-modules:/workspaces/dear-petition/node_modules
 
     env_file:
@@ -25,7 +26,7 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   postgres:
-    image: postgres:13  # same as production
+    image: postgres:13 # same as production
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -39,4 +40,5 @@ volumes:
   postgres-data:
   vscode-local:
   vscode-cache:
+  vscode-media:
   vscode-node-modules:
