--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
     "react-select": "^4.3.1",
     "remark-sectionize": "^1.1.1",
     "styled-components": "^5.3.0"
@@ -32,23 +31,26 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/file-saver": "^2.0.5",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.2",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23"
+    "postcss-import": "^15.1.0",
+    "prettier": "^2.7.0",
+    "tailwindcss": "^3.0.23",
+    "vite": "^4.3.5",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "browserslist": {
     "production": [
