--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,27 +30,30 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "react/jsx-filename-extension": [1, { "allow": "always" }], // TODO: as-needed
+    // Disabled default rules
+    "no-plusplus": "off",
+    "no-continue": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/destructuring-assignment": "off",
+    "react/prop-types": "off", // TODO: on when we add typescript
+
+    // warnings
     "prefer-template": "off", // TODO: warn
-    "react/prop-types": "off",
+    "react/no-array-index-key": "warn",
+
+    // customized rules
+    "react/jsx-filename-extension": [1, { "allow": "always" }], // TODO: as-needed
     "no-param-reassign": [
       "error", {
         "props": true,
         "ignorePropertyModificationsFor": ["state"]
       }
     ],
-    "no-use-before-define": "off",
-    "no-underscore-dangle": "off",
-    "no-unused-vars": ["off", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
-    "no-plusplus": "off",
-    "no-continue": "off",
-    "no-prototype-builtins": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/jsx-one-expression-per-line": "off",
-    "react/no-array-index-key": "off",
-    "react/destructuring-assignment": "off",
-    "react/no-danger": "warn",
-    "jsx-a11y/label-has-associated-control": ["error", { "assert": "either" } ],
-    "consistent-return": "warn"
+    "no-use-before-define": ["error", {
+      "functions": false,
+      "variables": false
+    }],
+    "no-unused-vars": ["error", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
+    "jsx-a11y/label-has-associated-control": ["error", { "assert": "either" } ]
   }
 }
