--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,9 +2,9 @@ FROM node:16-slim
 
 WORKDIR /code
 ENV PATH /code/node_modules/.bin:$PATH
-COPY package.json package-lock.json tailwind.config.js /code/
+COPY package.json package-lock.json /code/
 RUN npm install --silent
-COPY ./public /code/public/
+COPY index.html favicon.ico vite.config.js tailwind.config.js .postcssrc .eslintrc.json /code/
 COPY ./src /code/src/
 
 WORKDIR /code/
